// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches a previous snapshot 1`] = `
<img
  class="sc-bdVaJa hrdBvl"
  src="https://randomuser.me/api/portraits/men/51.jpg"
>
  
</img>
`;

exports[`should render a avatar component 1`] = `
<img
  className="sc-bdVaJa MHWqC"
  size="medium"
  src="https://randomuser.me/api/portraits/men/51.jpg"
/>
`;
